# codex2claude

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
bridge/codex2claude/: claude_cli.py  cli.py  errors.py  locking.py  logging_utils.py  models.py  paths.py  state.py  threading.py
bridge/codex2claude.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/roadmaps/: 2026-03-28-v0.2.0-roadmap.md
docs/superpowers/plans/: 2026-03-28-codex-to-claude-v1.md
docs/superpowers/specs/: 2026-03-28-codex-to-claude-design.md
skills/codex-to-claude/: SKILL.md
tests/: test_admin_commands.py  test_ask_flow_mock.py  test_claude_cli_mock.py  test_cli_smoke.py  test_concurrency.py  test_locking.py  test_package_metadata.py  test_paths.py  test_real_claude_cli.py  test_recovery.py  test_skill_docs.py  test_state.py  test_threading.py
