[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex2claude"
version = "0.1.0"
description = "Local Codex-to-Claude bridge CLI"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
codex2claude = "codex2claude.cli:main"

[tool.setuptools]
package-dir = {"" = "bridge"}

[tool.setuptools.packages.find]
where = ["bridge"]
