[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex2claude"
version = "0.1.3"
description = "Local Codex-to-Claude bridge CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "OpenAI Codex" }]
keywords = ["codex", "claude", "cli", "bridge", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Housetan218/codex2claude"
Repository = "https://github.com/Housetan218/codex2claude"
Issues = "https://github.com/Housetan218/codex2claude/issues"
Releases = "https://github.com/Housetan218/codex2claude/releases"

[project.scripts]
codex2claude = "codex2claude.cli:main"

[tool.setuptools]
package-dir = {"" = "bridge"}

[tool.setuptools.packages.find]
where = ["bridge"]
